# translator

./: .gitignore  Cargo.toml  LICENSE  README.md
backend/: .env.example  Cargo.toml
backend/migrations/2017-07-16-154944_create_users_tbl/: up.sql
backend/migrations/2017-07-16-154950_create_languages_tbl/: up.sql
backend/migrations/2017-07-16-154958_create_keys_tbl/: up.sql
backend/migrations/2017-07-16-155002_create_translations_tbl/: up.sql
backend/migrations/2017-07-28-151530_create_api_tokens/: down.sql  up.sql
backend/migrations/20170716154958_create_keys_tbl/: up.sql
backend/migrations/20170728151530_create_api_tokens/: up.sql
backend/src/: app.rs  config.rs  error.rs  main.rs  repo.rs  server.rs
backend/src/api/: mod.rs  mutation.rs  query.rs  types.rs
backend/src/commands/: mod.rs
backend/src/db/: db.rs  mod.rs
backend/src/db/schema/: api_token.rs  key.rs  language.rs  mod.rs  translation.rs  user.rs
backend2/: .gitignore  Cargo.toml
backend2/migrations/2018-06-19-185339_create_base_tables/: down.sql  up.sql
backend2/src/: main.rs  prelude.rs  schema.rs
backend2/src/app/: mod.rs
backend2/src/app/keys/: mod.rs
backend2/src/app/languages/: mod.rs
backend2/src/app/tokens/: mod.rs
backend2/src/app/translation_requests/: mod.rs
backend2/src/app/translations/: mod.rs
backend2/src/app/users/: mod.rs
backend2/src/db/: mod.rs  pool.rs  schema.rs  types.rs
backend2/src/server/: mod.rs
docker/: Dockerfile
frontend/: .babelrc  .gitignore  package.json  tsconfig.json  webpack.config.js
frontend/src/: api.ts  app.tsx  compose.d.ts  queries.ts  types.ts
frontend/src/components/: App.tsx  Login.tsx
frontend/src/components/admin/: Admin.tsx  Language.tsx  Languages.tsx  NewLanguage.tsx
frontend/src/components/overview/: KeySearch.tsx  KeyTree.tsx  NewKey.tsx  Overview.tsx
frontend/src/components/translate/: Item.tsx  RenameKey.tsx  Translate.tsx
frontend/styles/: app.scss
frontend2/: Cargo.toml
frontend2/src/: main.rs
frontend2/src/components/: login_screen.rs  mod.rs
frontend2/src/services/: client.rs  mod.rs
