[package]
authors = ["theduke <chris@theduke.at>"]
name = "translator"
version = "0.1.0"
[dependencies]
diesel_migrations = "1.0.0-beta1"
dotenv = "= 0.10.1"
error-chain = "= 0.11.0"
juniper = "= 0.9.1"
juniper_rocket = "*"
r2d2 = "= 0.8.1"
r2d2-diesel = "1.0.0-beta1"
ring-pwhash = "= 0.11.0"
rocket = "= 0.3.4"
rocket_codegen = "= 0.3.4"
rocket_contrib = "= 0.3.4"
serde = "= 1.0.24"
serde_derive = "= 1.0.24"
serde_json = "1.0.2"
simple_jwt = "= 1.2.1"

[dependencies.chrono]
features = ["serde"]
version = "0.4.0"

[dependencies.diesel]
features = ["sqlite"]
version = "1.0.0-beta1"
