[package]
authors = ["theduke <chris@theduke.at>"]
name = "translator"
version = "0.1.0"

[dependencies]
diesel_migrations = "1.3.0"
dotenv = "0.13.0"
error-chain = "0.11.0"
juniper = "0.9.1"
juniper_rocket = "*"
ring-pwhash = "0.11.0"
rocket = "0.3.13"
rocket_codegen = "0.3.13"
rocket_contrib = "0.3.13"
serde = "1.0.66"
serde_derive = "1.0.66"
serde_json = "1.0.21"
simple_jwt = "1.2.1"
uuid = {version = "0.6.5",features = ["serde","v4"]}
regex = "1.0.0"
diesel = { version = "1.3.2", features = ["sqlite", "r2d2"]}
chrono = { features = ["serde"], version = "0.4.0" }
