[package]
name = "backend2"
version = "0.1.0"
authors = ["Christoph Herzog <chris@theduke.at>"]

[dependencies]
serde = "1.0.66"
serde_derive = "1.0.66"
serde_json = "1.0.21"
failure = "0.1.1"
actix = "0.6.1"
actix-web = "0.6.13"
juniper = "0.9.2"
chrono = { version = "0.4.3", features = ["serde"] }
uuid = { version = "0.6.5", features = ["v4", "serde"] }
diesel = { version = "1.3.2", features = ["sqlite", "r2d2", "chrono"] }
regex = "1.0.0"
bcrypt = "0.2.0"
dotenv = "0.13.0"
